Updated - Added test data to database

--- a/templates/scores.html
+++ b/templates/scores.html
@@ -64,7 +64,7 @@
             </tr>
         </table>
 
-        <a href="####boxScore-Link">
+        <a href="{{url_for('boxScore')}}">
             <div class="boxScore">
                 Box Score
             </div>
