--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -18,6 +18,9 @@
        <input type='radio' name='division' value='Northwest'> Northwest <br>      
        <input type='radio' name='division' value='Pacific'> Pacific <br>     
        <input type='radio' name='division' value='Southwest' checked> Southwest <br>
+       <p> League: </p>
+       <input type='radio' name='league' value='NBA' checked> NBA <br>
+       <input type='radio' name='league' value='NFL'> NFL <br>
        <input type='submit' value='Create'>
        <a href="{{url_for('scores')}}"> Cancel </a>
    </form>
