--- a/templates/roster.html
+++ b/templates/roster.html
@@ -26,5 +26,5 @@
         </tr>
         {% endfor %}
     </table>
-
+    <h3> <a href="{{url_for('addPlayer', team_id=team.id)}}"> add player </a></h3>
 </div>
