UPDATED - Fixing routing, fixing links
- adding test data
- need to add default page for incorrect links
- need more test data
- need to design UI

--- a/templates/leagueinfo.html
+++ b/templates/leagueinfo.html
@@ -1,5 +1,10 @@
+{{ league.name }}
 {% for team in teams %}
 <div>
-    {{ team.name }}
+    <a href="{{url_for('teamInfo', league_id=league.id, team_id=team.id)}}">
+        {{ team.name }}
+    </a>
 </div>
 {% endfor %}
+<br>
+<a href="{{url_for('addTeam', league_id=league.id)}}"> Add Team </a>
