--- a/templates/newteam.html
+++ b/templates/newteam.html
@@ -1,13 +1,11 @@
 <div>
-   <h1> Add Team to DB </h1>
+   <h1> Add a new team to the league </h1>
    <form action="#" method='post'>
        <p> Team Name: </p>
        <input type='text' size='30' name='name'>
-       <p> League: </p>
-       <input type='text' size='30' name='league'> 
        <br>
        <input type='submit' value='Create'>
        <br>
-       <a href="{{url_for('scores')}}"> Cancel </a>
+       <a href="{{url_for('leagues')}}"> Cancel </a>
    </form>
 </div>
