--- a/templates/scores.html
+++ b/templates/scores.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends "main.html" %}
+
+{% block title %} Scores {% endblock %}
+
+{% block content %}
 
 <head>
     <style>
@@ -68,4 +71,4 @@
 
 </body>
 
-</html>
+{% endblock %}
