--- a/templates/main.html
+++ b/templates/main.html
@@ -27,6 +27,7 @@
                     Leagues
                 </a>
                 <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{{url_for('leagues')}}"> Leagues </a>
                     <a class="dropdown-item" href="{{url_for('teams')}}"> Teams </a>
                     <a class="dropdown-item" href="{{url_for('players')}}"> Players </a>
                 </div>
