--- a/templates/players.html
+++ b/templates/players.html
@@ -4,4 +4,10 @@
 
 {% block content %}
 
+<div>
+    <a href="{{url_for('playerStats', player_id=player.id)}}">
+        <h3> {{ player.name }} </h3>
+    </a>
+</div>
+
 {% endblock %}
