--- a/templates/teams.html
+++ b/templates/teams.html
@@ -3,5 +3,14 @@
 {% block title %} Teams {% endblock %}
 
 {% block content %}
+<h2> Browse all teams: </h2>
+<br>
+
+{% for team in teams %}
+<div>
+    <h3> {{ team.name }} </h3>
+</div>
+<br>
+{% endfor %}
 
 {% endblock %}
