--- a/templates/main.html
+++ b/templates/main.html
@@ -27,11 +27,33 @@
                     Leagues
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="{{url_for('leagues')}}"> Leagues </a>
                     <a class="dropdown-item" href="{{url_for('teams')}}"> Teams </a>
                     <a class="dropdown-item" href="{{url_for('players')}}"> Players </a>
                 </div>
             </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('about')}}"> About </a>
+            </li>
+            
+            {% if login_session == False %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('login')}}"> Login </a>
+            </li>
+            {% else %}
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{url_for('Leagues')}}" id="navbardrop" data-toggle="dropdown">
+                    Account Info
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#"> Account Info </a>
+                    <a class="dropdown-item" href="#"> Leagues </a>
+                    <a class="dropdown-item" href="#"> Teams </a>
+                    <a class="dropdown-item" href="{{url_for('logout')}}"> Logout </a>
+                </div>
+            </li>
+            {% endif %}
+            
         </ul>
     </nav>
     <br>
